[package]
name = "fastobo-validator"
version = "0.2.4"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
license = "MIT"
description = "Faultess validation tool for OBO products"
repository = "https://github.com/fastobo/fastobo"
homepage = "https://github.com/fastobo/fastobo"
readme = "README.md"
keywords = ["obo", "ontology", "validation"]
categories = ["science"]

[badges.travis-ci]
repository = "fastobo/fastobo-validator"
[badges.is-it-maintained-issue-resolution]
repository = "fastobo/fastobo-validator"
[badges.maintenance]
status     = "actively-developed"

[dependencies]
clap = "2.33.0"
colored = "1.9.2"
fastobo = "0.8.2"
log = "0.4.8"
isbn = "0.2.0"
textwrap = "0.11.0"
itertools = "0.9.0"

[dev-dependencies]
assert_cmd = "0.12.0"

[profile.test]
opt-level = 1
