[package]
name = "fastobo-validator"
version = "0.4.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
license = "MIT"
description = "Faultess validation tool for OBO products"
repository = "https://github.com/fastobo/fastobo"
homepage = "https://github.com/fastobo/fastobo"
readme = "README.md"
keywords = ["obo", "ontology", "validation"]
categories = ["science"]

[badges.travis-ci]
repository = "fastobo/fastobo-validator"
[badges.is-it-maintained-issue-resolution]
repository = "fastobo/fastobo-validator"
[badges.maintenance]
status     = "actively-developed"

[dependencies]
clap = "2.33.1"
colored = "2.0.0"
fastobo = "0.12.0"
log = "0.4.11"
isbn = "0.2.0"
textwrap = "0.12.1"
itertools = "0.9.0"

[dev-dependencies]
assert_cmd = "1.0.8"

[profile.test]
opt-level = 1
