[package]
name = "fastobo-validator"
version = "0.4.4"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
license = "MIT"
description = "Faultess validation tool for OBO products"
repository = "https://github.com/fastobo/fastobo"
homepage = "https://github.com/fastobo/fastobo"
readme = "README.md"
keywords = ["obo", "ontology", "validation"]
categories = ["science"]

[badges.travis-ci]
repository = "fastobo/fastobo-validator"
[badges.is-it-maintained-issue-resolution]
repository = "fastobo/fastobo-validator"
[badges.maintenance]
status     = "actively-developed"

[dependencies]
colored = "2.0.0"
fastobo = "0.15.0"
log = "0.4.11"
isbn = "0.2.0"
textwrap = "0.14.2"
itertools = "0.10.0"
[dependencies.clap]
version = "3.2.19"
features = ["cargo"]

[dev-dependencies]
assert_cmd = "2.0.0"

[profile.test]
opt-level = 1
